--- a/site/themes/gohugo-theme-ananke-master/layouts/partials/menu-contextual.html
+++ b/site/themes/gohugo-theme-ananke-master/layouts/partials/menu-contextual.html
@@ -3,12 +3,12 @@
   https://gohugo.io/content-management/toc/
 */}}
 
-{{- if .Params.toc -}}
+{{/*- if .Params.toc -*/}}
   <div class="bg-light-gray pa3 nested-list-reset nested-copy-line-height nested-links">
     <p class="f5 b mb3">{{ i18n "whatsInThis" . }}</p>
       {{ .TableOfContents }}
   </div>
-{{- end -}}
+{{/*- end -*/}}
 
 {{/*
   Use Hugo's native related content feature to pull in content that may have similar parameters, like tags. etc.
